kubernetes/kafka-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kafka
  namespace: kafka
spec:
  selector:
    app: kafka  # ajuste para o label correto do pod kafka
  ports:
    - port: 9092
      targetPort: 9092
