kubernetes/kafka-producer-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kafka-producer-api-ingress
  namespace: kafka
  annotations:
    konghq.com/strip-path: "true"
spec:
  ingressClassName: kong
  rules:
  - host: producer.example.com  # seu domínio
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: kafka-producer-api
            port:
              number: 80
